[package]
name = "arrow"
version = "0.1.0"
authors = ["GreatGodOfFire <greatgodoffire@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.119"
tokio = { version = "1.0", features = ["full"] }
arrow_serde = { path = "../arrow_serde" }