[package]
name = "arrow_serde"
version = "0.1.0"
authors = ["GreatGodOfFire <greatgodoffire@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.119", features = ["derive"] }
arrow_serde_macros = { path = "../arrow_serde_macros" }