[package]
name = "arrow_serde_macros"
version = "0.1.0"
authors = ["GreatGodOfFire <greatgodoffire@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
serde = { version = "1.0.119", features = ["derive"] }
quote = "1.0.8"
syn = { version = "1.0.58", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"